--- a/inlinekeyboard/index.html
+++ b/inlinekeyboard/index.html
@@ -66,7 +66,7 @@
 </div>
 <div id=descriptions class=uk-modal>
     <div class="uk-modal-dialog uk-width-1-1">
-        <a href="" class="uk-modal-close uk-close uk-hidden-small" style="left:10px;;font-size: 21px;"></a>
+        <a href="" class="uk-modal-close uk-close uk-hidden-small" style="left:10px;;font-size: 21px;"><i class="fa fa-times pos-abs invalid"></i></a>
         <div class="uk-width-small-1-1 uk-container-center" style="max-width:800px;direction:rtl;padding:10px;">
             <a href="" class="uk-modal-close uk-close uk-visible-small " style="float:left;font-size: 21px;"></a>
             <h3 class=iransans>توضیحات :</h3>
